# 4dach-qt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLEANUP_PLAN.md  Makefile  README-perplexity.md  README.md  _TODO.md  __main__.py  app_assets.py  app_icons.py  build-windows.bat  config.json  dialogs.py  findings.md  mainwindow.py  opencode.json  persistence.py  plan_perplexity.md  progress.md  project-management-redesign-plan.md  project_files.py  pyproject.toml  raport-in-browser-plan.md  requirements.txt  task_plan.md  test_geom.py  test_geom10.py  test_geom2.py  test_geom3.py  test_geom4.py  test_geom5.py  test_geom6.py  test_geom7.py  test_geom8.py  test_geom9.py  ui_form.py  user_preferences.py  workflow.md
.codex/: README.md  hooks.json
.codex/hooks/: branch_guard_common.py  session_start_review_context.py  stop_branch_guard.py  user_prompt_branch_snapshot.py  user_prompt_review_context.py
.serena/: project.yml
DOC/: plan-logiki-i-testow.md  ui-info.md
_TODO/: 00_STAGE_0_BASELINE.md  01_STAGE_1A_WORKSPACE.md  02_STAGE_1B_MAIN_WINDOW_LOW_RISK.md  03_STAGE_1C_PROJECT_STATE.md  04_STAGE_2_LAYOUT_ENGINE_TESTS.md  05_STAGE_3_LAYOUT_ENGINE_REFACTOR.md  06_STAGE_4_MAIN_WINDOW_DECOMPOSITION.md  07_STAGE_5_DRAWING_CANVAS_PREP.md  08_REVIEW_PASS.md  09_ISSUE.md  10_RISKY_REFACTOR_AGENT_BRIEF.md  11_SEMANTIC_DUPLICATION_BRIEF.md  12A_STAGE_2_DRAWING_CANVAS_TEST_FIRST_HARDENING.md  12B_STAGE_3_CANVAS_PURE_HELPERS_EXTRACTION.md  12C_STAGE_4_DRAWING_CANVAS_INTERNAL_SPLIT.md  12D_STAGE_5_LAYOUT_ENGINE_REFACTOR.md  12E_STAGE_6_MAIN_WINDOW_CLEANUP.md  12F_STAGE_7_PROJECT_STATE_CLEANUP.md  12G_STAGE_8_COMPATIBILITY_AUDIT_LOW_ROI.md  12_POST_STAGE1_FULL_CLEANUP_ROADMAP.md  13_CANVAS_ROLLOUT_2_3_HANDOFF_2026-05-05.md  14_IMPORT_RZUTU_NEXT_STEPS_2026-05-20.md
core/: __init__.py  app_settings.py  canvas_mapper.py  geometry.py  layout_engine.py  models.py  project_state.py  reporting.py  roof_plan_import.py  rounding.py
docs/: DO_SPRAWDZENIA.md  DrawingCanvasSplitPlan.md  PROMPTY-podzial.md  PROMPTY.txt  SKILL.md  kreator-polaci-v2.md  manual-qa-stage9.md  plan-cleanupu-ui-i-usuniecia-martwego-kodu.md  plan-zmian-canvas-ustawienia-toolbar-2026-05-04.md  plan_ksztalt-wycinek-faza-1.md  plan_ksztalt-wycinek-faza-2.md  plan_ksztalt-wycinek-v2.md  review-backlog.md  test-e2e.md
inference-roboflow/: infer_roboflow_svg.py  requirements.txt
planning/: findings.md  progress.md  task_plan.md
projekty/: projekcik.json
scripts/: cleanup_preview.sh  export-pr-review.sh  generate_app_icon.py  print_test_expectations.py  review_and_run_tests.py  sync-review-backlog.py  watch-pr.sh
tests/: conftest.py  test_add_polac_catalog.py  test_add_polac_dialog.py  test_app_settings.py  test_canvas_mapper.py  test_canvas_pure_helpers.py  test_drawing_canvas.py  test_geometry.py  test_infer_roboflow_project.py  test_layout_engine.py  test_mainwindow_ui_contract.py  test_models_and_state.py  test_project_details_dialog.py  test_project_files.py  test_project_manager_dialog.py  test_reporting.py  test_roof_plan_import.py  test_roof_plan_import_dialog.py  test_user_preferences.py  test_workspace.py
ui/: __init__.py  drawing_canvas.py  main_window.py  main_window_dialogs.py  main_window_refresh.py  report_view.py  theme_manager.py  toolbar.py  workspace.py
(+75 files in other folders)
