[project]
name = "4dach"
version = "0.1.0"
optional-dependencies = { test = ["pytest>=8.0", "pytest-qt>=4.4"] }
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.11.0",
]
[tool.pyside6-project]
files = [
  "mainwindow.py",
  "dialogs.py",
  "app_icons.py",
  "form.ui",
  "core/__init__.py",
  "core/models.py",
  "core/project_state.py",
  "core/geometry.py",
  "core/layout_engine.py",
  "core/reporting.py",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-image-snapshot>=0.4.5",
    "pytest-qt>=4.5.0",
]
